--- a/index.html
+++ b/index.html
@@ -370,10 +370,13 @@
 		</div>
 	</section>
 
-    <div id="modal">
-      <h2>Hello!</h2>
-      <p>You are awesome!</p>
-    </div>
+  <div id="modal">
+    <form>
+      <input type="text" placeholder="Ваше имя">
+      <input type="text" placeholder="Ваш телефон">
+      <input type="submit" value="Отправить">
+    </form>
+  </div>
 
 
 
